Fixed spacings

--- a/app/client/stylesheets/components/compositions/pu-composition-partupdetailupdates.sass
+++ b/app/client/stylesheets/components/compositions/pu-composition-partupdetailupdates.sass
@@ -80,8 +80,7 @@
 
         + .pu-sub-newupdatesseparator
             &.pu-state-active
-                margin-top: 50px
-                margin-bottom: 50px
+                margin-top: 30px
 
     .pu-sub-revealupdatesbutton
         aside
