--- a/app/client/stylesheets/components/pu-block.sass
+++ b/app/client/stylesheets/components/pu-block.sass
@@ -64,7 +64,7 @@
     .pu-sub-editbutton
         opacity: 0
         position: absolute
-        top: $spacing-default - 8px
+        top: $spacing-default - 14px
         right: $spacing-default
         $bgc: $color-background
         background-color: rgba($bgc, .95)
